Fix jumpy map timeline, final tspan positioning

--- a/public/css/chart.css
+++ b/public/css/chart.css
@@ -821,7 +821,7 @@ select.disabled {
 }
 #chart .map-timeline-controls {
     position: absolute;
-    bottom: -1px;
+    bottom: 0px;
     z-index: 2;
     width: 100%;
     color: #404040;
@@ -858,12 +858,11 @@ select.disabled {
 #map-chart-tab .pause-btn {
     display: none;
     position: relative;
-    top: 1px;
 }
 #chart #map-chart-tab .map-timeline-controls .timeline-control {
     /*display: none;*/
     
-    height: 100%;
+    height: 2.5em;
     width: calc(100% - 4em);
     position: relative;
     cursor: pointer;
